--- a/StudyNookBackend/src/main/resources/application.properties
+++ b/StudyNookBackend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=StudyNookBackend
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+jwt.secret=${JWT_SECRET}
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
